# osm-reader

./: .gitignore  Cargo.toml  Makefile  build.rs  docker-compose.yml
src/: blob.rs  block.rs  dense.rs  elements.rs  error.rs  lib.rs  reader.rs
src/proto/: mod.rs
